# Persona-Driven-Document-Intelligence-Engine

./: .gitignore  README.md  docker-compose.yml  main.py  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml
app/api/auth/login/: route.ts
app/api/auth/signup/: route.ts
app/api/protected/me/: route.ts
backend/: .env.example  .gitignore  Dockerfile  Procfile  package-lock.json  package.json  requirements.txt
backend/prisma/: schema.prisma
backend/prisma/migrations/20250809175505_init/: migration.sql
backend/prisma/migrations/20250811142659_add_insights_and_filename/: migration.sql
backend/prisma/migrations/20250829083812_init/: migration.sql
backend/service/: Dockerfile  api.py
backend/service/RAG/: extractor.py  pineDB.py  rag_system.py  vectordb.py
backend/src/: app.js
backend/src/config/: passport.js
backend/src/controllers/: authController.js  chatController.js  historyController.js  userController.js
backend/src/middlewares/: authMiddleware.js  uploadMiddleware.js
backend/src/routes/: authRoutes.js  chatRoutes.js  userRoutes.js
backend/src/utils/: jwt.js
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: .env.example  App.tsx
client/src/assets/: assets.tsx
client/src/contexts/: pdfContext.tsx  userContext.tsx
client/src/pages/: Dashboard.tsx  History.tsx  Login.tsx  OAuthsuccess.tsx  PDFPreview.tsx  Profile.tsx  Signup.tsx
lib/: auth.ts
prisma/: schema.prisma
