[project]
name = "persona-driven-document-intelligence-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "pinecone>=7.3.0",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]


